Bumped version to 2.1: Added solr-based Vocabulary Tagger, integration of JCarafe CRF Machine Learning engine, support for initializing solr gazetteer via system property, data loading now done independently of solr text tagger, conversion of GATE documents to/from MAT JSON documents (to support JCarafe (now) and MAT annotation tool (future)) handful of minor bugs.